# kseqcpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  kseq.hpp  test.cpp
